--- a/templates/index.html
+++ b/templates/index.html
@@ -1,32 +1,63 @@
 <!DOCTYPE html>
 <html>
+
 <head>
-    <title>Upload Image</title>
-    <style>
-        .color-box {
-            width: 50px;
-            height: 50px;
-            display: inline-block;
-            margin: 5px;
-        }
-    </style>
+  <title>Upload Image</title>
+  <style>
+    .color-box {
+      width: 50px;
+      height: 50px;
+      display: inline-block;
+      margin: 5px;
+      border: 1px solid #333;
+      /* Adding a border */
+      position: relative;
+      /* Positioning context for the tooltip */
+    }
+
+    .color-tooltip {
+      display: none;
+      position: absolute;
+      top: 100%;
+      left: 50%;
+      transform: translateX(-50%);
+      background: rgba(0, 0, 0, 0.7);
+      color: #fff;
+      padding: 5px;
+      border-radius: 3px;
+      white-space: nowrap;
+      margin-top: 5px;
+    }
+
+    .color-box:hover .color-tooltip {
+      display: block;
+    }
+  </style>
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-4bw+/aepP/YC94hEpVNVgiZdgIC5+VKNBQNGCHeKRQN+PtmoHDEXuppvnDJzQIu9" crossorigin="anonymous">
 </head>
+
 <body>
 
-<h3>Upload an image to get the top 10 colors:</h3>
-<form action="/upload" method="post" enctype="multipart/form-data">
+  <h3>Upload an image to get the top 10 colors:</h3>
+  <form action="/upload" method="post" enctype="multipart/form-data">
     <input type="file" name="file" accept="image/*">
     <input type="submit" value="Upload">
-</form>
+  </form>
 
-{% if colors %}
-<h4>Top 10 Colors:</h4>
-<div>
+  {% if colors %}
+  <h4>Top 10 Colors:</h4>
+  <div>
     {% for color in colors %}
-    <div class="color-box" style="background-color: {{ color }};"></div>
+    <div class="color-box" style="background-color: {{ color }};" onclick="navigator.clipboard.writeText('{{ color }}')">
+      <div class="color-tooltip">
+        {{ color }}
+      </div>
+    </div>
     {% endfor %}
-</div>
-{% endif %}
+
+  </div>
+  {% endif %}
 
 </body>
+
 </html>
