--- a/templates/index.html
+++ b/templates/index.html
@@ -2,80 +2,56 @@
 <html>
 
 <head>
-  <title>Upload Image</title>
-  <style>
-    .color-box {
-      width: 50px;
-      height: 50px;
-      display: inline-block;
-      margin: 5px;
-      border: 1px solid #333;
-      /* Adding a border */
-      position: relative;
-      /* Positioning context for the tooltip */
-      cursor: pointer;
-    }
-
-    .color-tooltip {
-      display: none;
-      position: absolute;
-      top: 100%;
-      left: 50%;
-      transform: translateX(-50%);
-      background: rgba(0, 0, 0, 0.7);
-      color: #fff;
-      padding: 5px;
-      border-radius: 3px;
-      white-space: nowrap;
-      margin-top: 5px;
-    }
-
-    .color-tooltip::after {
-      content: 'Click to copy';
-      display: block;
-    }
-
-    .color-box:hover .color-tooltip {
-      display: block;
-    }
-  </style>
-  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-4bw+/aepP/YC94hEpVNVgiZdgIC5+VKNBQNGCHeKRQN+PtmoHDEXuppvnDJzQIu9" crossorigin="anonymous">
+    <title>Upload Image</title>
+    <link href="{{ url_for('static', filename='styles.css') }}" rel="stylesheet">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-4bw+/aepP/YC94hEpVNVgiZdgIC5+VKNBQNGCHeKRQN+PtmoHDEXuppvnDJzQIu9" crossorigin="anonymous">
 </head>
 
-<body>
+<body class="bg-light">
 
-  <h3>Upload an image to get the top 10 colors:</h3>
-  <form action="/upload" method="post" enctype="multipart/form-data">
-    <input type="file" name="file" accept="image/*">
-    <input type="submit" value="Upload">
-  </form>
-
-  {% if colors %}
-  <h4>Top 10 Colors:</h4>
-  <div>
-    {% for color in colors %}
-    <div class="color-box" style="background-color: {{ color }};" onclick="copyColor('{{ color }}', this)">
-      <div class="color-tooltip">
-        {{ color }} - Click to copy
-      </div>
+<div class="container mt-5">
+    <div class="card mx-auto" style="max-width: 500px;">
+        <div class="card-body">
+            <h3 class="card-title text-center">Upload an image</h3>
+            <p class="text-center">Get the top 10 colors from your image</p>
+            <form action="/upload" method="post" enctype="multipart/form-data">
+                <div class="mb-3">
+                    <input type="file" name="file" accept="image/*" class="form-control">
+                </div>
+                <div class="d-grid gap-2">
+                    <button type="submit" class="btn btn-primary">Upload</button>
+                </div>
+            </form>
+        </div>
     </div>
-    {% endfor %}
 
+    {% if colors %}
+    <div class="text-center mt-5">
+        <h4>Top 10 Colors:</h4>
+        <div class="d-flex justify-content-center flex-wrap">
+            {% for color in colors %}
+            <div class="color-box m-2" style="background-color: {{ color }};" onclick="copyColor('{{ color }}', this)">
+                <div class="color-tooltip">
+                    {{ color }} - Click to copy
+                </div>
+            </div>
+            {% endfor %}
+        </div>
+    </div>
+    {% endif %}
+</div>
 
-  </div>
-  {% endif %}
-
-  <script>
+<script>
     function copyColor(hexColor, element) {
-      navigator.clipboard.writeText(hexColor).then(function() {
-        var tooltip = element.querySelector('.color-tooltip');
-        tooltip.textContent = 'Copied!';
-        setTimeout(function() {
-          tooltip.textContent = hexColor + ' - Click to copy';
-        }, 1500);
-      });
+        navigator.clipboard.writeText(hexColor).then(function() {
+            var tooltip = element.querySelector('.color-tooltip');
+            tooltip.textContent = 'Copied!';
+            setTimeout(function() {
+                tooltip.textContent = hexColor + ' - Click to copy';
+            }, 1500);
+        });
     }
-  </script>
+</script>
 
 </body>
 
