--- a/static/styles.css
+++ b/static/styles.css
@@ -4,6 +4,7 @@
     border: 1px solid #333;
     cursor: pointer;
     position: relative;
+    margin: 10px;
 }
 
 .color-tooltip {
@@ -17,7 +18,7 @@
     padding: 5px;
     border-radius: 3px;
     white-space: nowrap;
-    margin-top: 5px;
+    margin-top: 10px;
 }
 
 .color-tooltip::after {
